B-F Sandbox Full-Backup/src/objects/Banner_Group_Wholesaler_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Banner_Group_Name__c</fullName>
        <formula>Banner_Group__r.Banner_Group_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner Group</label>
        <referenceTo>Banner_Groups__c</referenceTo>
        <relationshipLabel>Banner Group Wholesalers Junction</relationshipLabel>
        <relationshipName>Banner_Group_Wholesalers_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Banner_Number__c</fullName>
        <externalId>true</externalId>
        <label>Wholesaler Banner Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>Wholesaler__c</referenceTo>
        <relationshipLabel>Banner Group Wholesalers Junction</relationshipLabel>
        <relationshipName>Banner_Group_Wholesalers_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Banner Group Wholesaler Junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Banner_Group__c</columns>
        <columns>Banner_Group_Name__c</columns>
        <columns>Wholesaler__c</columns>
        <columns>Wholesaler_Banner_Number__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>a2QQ</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Banner Group Wholesaler Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banner Group Wholesalers Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>